# advent-of-code

./: .yamllint.yml  README.md  pyproject.toml  tox.ini
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: codeql.yml
src/2024-01/: main.py
src/2024-02/: main.py
